
	* lib/kde4.cygclass (kde4_compile): Define SVN_URI.
	Handle DO_NOT_COMPILE by passing appropriate options to cmake.
	Pass additional Qt4- and KDE4-specific options to cmake.
	(kde4_install): Delete kdeinit4 implibs.

	* lib/qt4.cygclass: Define QT4_RCC and QT4_UIC3.
	* lib/qt4-cmake.cygclass: Pass Qt4-specific options to cmake.

	* lib/R.cygclass (R_install): Use cp -LR to avoid dangling symlinks.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install):
	Do not rely on extconf.rb to determine implib name.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/kde4.cygclass: New cygclass for KDE4 packages (in progress).

	* lib/ruby-gnome2.cygclass: Refactored for 0.17.0-rc1.

	* lib/qt3.cygclass: Prefer QT3_* constant naming to not clash with Qt4.
	(cygqmake3): New name for qt3_qmake, latter is deprecated.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/qt4.cygclass:
	* lib/qt4-cmake.cygclass:
	* lib/qt4-qmake.cygclass: New cygclasses for Qt4 support.

	* lib/berkdb.cygclass:
	(__berkdb_build_java): Added; db4.7 Java bindings require Java 1.5.
	(berkdb_compile): Fix --with-tcl configure flag.
	Link C++/JNI/Tcl bindings against libdb.
	(berkdb_install): Java bindings only if __berkdb_build_java.
	(berkdb_postinst): Only -devel package should use alternatives.
	(berkdb_prerm): Merged into berkdb_postinst.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.12 ***

	* bin/cygport.in (cygautoreconf):
	Handle COPYING and INSTALL only if files, not directories (e.g. gcc).
	Handle COPYING and INSTALL for AC_CONFIG_SUBDIRS.

	* lib/gst-plugins0.10.cygclass: Add support for gst-plugins-gl.
	Update external Farsight plugin list.
	(gst_plugins_compile): Pass Cygwin default sinks/srcs to configure.

	* lib/ruby-gnome2.cygclass:
	Overhaul to fix building all modules from monolithic ruby-gnome2-all source.

	* bin/cygport.in (unpack): Accept .tar.bz files.
	(__prep_empty_dirs): Call keepdir() where KEEPDIRS is defined.