@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.126 2008-07-03 04:35:15 yselkowitz Exp $
+# $Id: cygport.in,v 1.127 2008-07-27 16:49:32 yselkowitz Exp $
 #
 ################################################################################
 
@@ -426,6 +426,7 @@ readonly -f check_prog check_prog_req __check_function __check_unstable __versio
 # src_prep functions
 #
 # mutable:
+#	DISTCLEANFILES
 #	USE_MANAGED_MOUNT
 #	src_patch_hook()
 #	src_unpack_hook()
@@ -786,12 +787,19 @@ __src_prep() {
 
 	cd ${origsrcdir}/${SRC_DIR};
 
+	if defined DISTCLEANFILES
+	then
+		inform "Removing DISTCLEANFILES..."
+		rm -f ${DISTCLEANFILES}
+	fi
+
 	# src_unpack_hook() is an optional function which can be defined
 	# to alter the original source tree and avoid large patches
 	# or long DIFF_EXCLUDES, or to apply patches in tarballs
 	if __check_function src_unpack_hook
 	then
 		__check_unstable src_unpack_hook;
+		cd ${origsrcdir}/${SRC_DIR};
 	fi
 
 	for src_patch in ${_src_orig_patches}
@@ -804,6 +812,7 @@ __src_prep() {
 	if __check_function src_patch_hook
 	then
 		__check_unstable src_patch_hook;
+		cd ${origsrcdir}/${SRC_DIR};
 	fi
 
 	__step "Preparing working source directory";
